syntax = "proto3";

package ditto.example;

service HelloService {
  rpc Hello(HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string name = 1;
}
